--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0"
+  },
+  "dependencies": {
+    "babel-eslint": "^10.1.0"
   }
 }
