--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-react-hooks": "^4.3.0"
   },
   "dependencies": {
-    "babel-eslint": "^10.1.0"
+    "babel-eslint": "^10.1.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3"
   }
 }
