Generate react bundle

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "pm2 start lib/server.js --watch --interpreter babel-node"
+    "dev": "pm2 start lib/server.js --watch --interpreter babel-node",
+    "webpack": "webpack -wd"
   },
   "babel": {
     "presets": [
@@ -36,13 +37,22 @@
     "eslint-plugin-react-hooks": "^4.3.0"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.1.0",
-    "babel-preset-env": "^1.7.0",
+    "axios": "^0.16.2",
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^7.1.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "ejs": "^3.1.6",
-    "express": "^4.17.3",
-    "pm2": "^5.2.0"
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "lodash.debounce": "^4.0.8",
+    "lodash.pickby": "^4.6.0",
+    "pm2": "^2.5.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-addons-perf": "^15.4.2",
+    "react-dom": "^15.6.1",
+    "webpack": "^3.0.0"
   }
 }
