--- a/package.json
+++ b/package.json
@@ -1,58 +1,38 @@
 {
   "name": "advanced-react",
-  "version": "1.0.0",
-  "description": "Advanced React",
-  "main": "lib/server.js",
-  "directories": {
-    "lib": "lib"
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "pm2 start lib/server.js --watch --interpreter babel-node",
-    "webpack": "webpack -wd"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "babel": {
-    "presets": [
-      "react",
-      "env",
-      "stage-2"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/shd8/advanced-react.git"
-  },
-  "author": "shd8",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/shd8/advanced-react/issues"
-  },
-  "homepage": "https://github.com/shd8/advanced-react#readme",
-  "devDependencies": {
-    "eslint": "^8.10.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.3.0"
-  },
-  "dependencies": {
-    "axios": "^0.16.2",
-    "babel-cli": "^6.24.1",
-    "babel-loader": "^7.1.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "ejs": "^2.5.6",
-    "express": "^4.15.3",
-    "lodash.debounce": "^4.0.8",
-    "lodash.pickby": "^4.6.0",
-    "pm2": "^2.5.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-addons-perf": "^15.4.2",
-    "react-dom": "^15.6.1",
-    "webpack": "^3.0.0"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
